--- a/files/zh-cn/web/guide/ajax/getting_started/index.html
+++ b/files/zh-cn/web/guide/ajax/getting_started/index.html
@@ -115,7 +115,7 @@ httpRequest.send();
 
 <h2 id="Step_3_–_一个简单的例子">Step 3 – 一个简单的例子</h2>
 
-<p>让我们把所有的知识都集中起来做一个简单的HTTP请求。这个JavaScript会请求一个HTML文档 <code>test.html</code>，包含 "I'm a  test" 内容。然后我们 <code>alert()</code> 响应的内容。注意这个例子我们只是用了JavaScript，没有用jQuery。而且，HTML，XML和PHP文件都要放在用一个目录下。</p>
+<p>让我们把所有的知识都集中起来做一个简单的HTTP请求。这个JavaScript会请求一个HTML文档 <code>test.html</code>，包含 "I'm a  test" 内容。然后我们 <code>alert()</code> 响应的内容。注意这个例子我们只是用了JavaScript，没有用jQuery。而且，HTML，XML和PHP文件都要放在同一个目录下。</p>
 
 <pre class="brush: html">&lt;button id="ajaxButton" type="button"&gt;Make a request&lt;/button&gt;
 
